[package]
name = "se621"
version = "0.4.0"
edition = "2018"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version="0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.2"
urlencoding = "1.3.3"
indicatif = "0.16.1"
futures = "0.3.15"
crossbeam-channel = "0.5.1"
crossbeam = "0.8.0"
clap = "2.33.3"

[profile.release]
lto = true
codegen-units = 1
