[package]
name = "se621"
version = "0.5.1"
edition = "2018"
authors = ["Asriel <Asriel@dismail.de>"]
description = "A multithreaded e621/e926 downloader"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["furry", "scraper"]
repository = "https://github.com/Asriel/Se621"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version="0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.2"
urlencoding = "1.3.3"
futures = "0.3.15"
crossbeam-channel = "0.5.1"
crossbeam = "0.8.0"
clap = "2.33.3"

[profile.release]
lto = true
codegen-units = 1